--- a/index__op__text_rotator_classic.html
+++ b/index__op__text_rotator_classic.html
@@ -132,7 +132,7 @@
                     <!-- team-member's-bio -->
                     <div class="team-bio">
                         <figure>
-                            <img src="assets/images/about-us/kc.jpg" class="img-responsive center-block" alt="">
+                            <img src="" class="img-responsive center-block" alt="">
                         </figure>
                         <div class="team-description">
                             <div class="member-name">Kristin Corona</div>
@@ -143,13 +143,13 @@
                         <!-- team-member's-social -->
                         <div class="team-social">
                             <ul class="social-block">
-                                <li><a href="https://www.facebook.com/kristincorona"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
 
-                                <li><a href="https://twitter.com/kristincorona"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
 
-                                <li><a href="https://www.linkedin.com/in/kristincorona"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
 
-                                <li><a href="https://google.com/+KristinCorona"><i class="fa fa-google-plus"></i></a></li>
+                                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                             </ul>
                         </div>
 
@@ -162,23 +162,23 @@
                     <!-- team-member's-bio -->
                     <div class="team-bio">
                         <figure>
-                            <img src="assets/images/about-us/jm_alt.jpg" class="img-responsive center-block" alt="">
+                            <img src="" class="img-responsive center-block" alt="">
                         </figure>
                         <div class="team-description">
-                            <div class="member-name">Jonathan Mande</div>
-                            <div class="designation">Co-Organizer<br>Visionary</div>
+                            <div class="member-name">Jonathon Mande</div>
+                            <div class="designation">Co-Organizer</div>
                         </div>
 
                         <!-- team-member's-social -->
                         <div class="team-social">
                             <ul class="social-block">
-                                <li><a href="https://www.facebook.com/jon.mande"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
 
-                                <li><a href="https://twitter.com/Jon_Mande"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
 
-                                <li><a href="https://www.linkedin.com/in/jonathan-mande-054a3733"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
 
-                                <li><a href="https://plus.google.com/u/0/103390427093395379313"><i class="fa fa-google-plus"></i></a></li>
+                                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                             </ul>
                         </div>
                     </div><!--/team bio-->
@@ -190,11 +190,11 @@
                     <!-- team-member's-bio -->
                     <div class="team-bio">
                         <figure>
-                            <img src="assets/images/about-us/you.jpg" class="img-responsive center-block" width="170" height="auto" alt="">
+                            <img src="" class="img-responsive center-block" alt="">
                         </figure>
                         <div class="team-description">
                             <div class="member-name">YOU!</div>
-                            <div class="designation">TBD<br>Innovator</div>
+                            <div class="designation">TBD</div>
                         </div>
 
                         <!-- team-member's-social -->
@@ -260,7 +260,7 @@
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
             <div id="ytPlayer" class="embed-responsive embed-responsive-16by9">
-                <iframe src="https://embed-ssl.ted.com/talks/shawn_achor_the_happy_secret_to_better_work.html" width="640" height="360" frameborder="0" scrolling="no" class="embed-responsive-item" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                <iframe  class="embed-responsive-item" frameborder="0" title="YouTube video player" type="text/html" src="http://www.ted.com/playlists/180/the_10_most_popular_tedx_talks#"></iframe>
             </div><!--ytPlayer-->
         </div>
     </div>
