updates to homepage; enable subscribe form

--- a/index.html
+++ b/index.html
@@ -68,10 +68,9 @@
             </button>
 
             <!-- Logo -->
-            <div class="navbar-brand" itemscope itemtype="https://schema.org/Organization">
+            <div class="navbar-brand dark-bg" itemscope itemtype="https://schema.org/Organization">
                 <span itemprop="name" class="sr-only">TEDxLesley</span>
-                <a itemprop="url" href="index.html">
-                    TED<sup><strong>x</strong></sup>Lesley
+                <a itemprop="url" href="index.html"><img src="assets/images/logo.png" height="75" width="auto"/>
                 </a>
             </div>
             <!-- /Logo -->
