update index and favicons

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="Description" content="A fat free flat responsive corporate agency templae">
     <meta name="keywords" content="Agency, Corporate, Flat, Responsive">
     <meta name="robots" content="noindex,nofollow">
-
+    <!-- Google Apps -->
+    <meta name="google-site-verification" content="yilynoEuu6FfRbuO3eapHGOoZwapON0gXslTdfcXj6A" />
+    <!-- -->
     <title>TEDxLesley</title>
 
     <link rel="shortcut icon" href="assets/images/favicons/favicon.ico" />
@@ -121,7 +123,7 @@
     <div class="container">
         <header class="section-heading">
             <h2>Meet the Team</h2>
-            <span>Help Wanted</span>
+            <span></span>
         </header>
 
         <div class="section-content">
@@ -192,8 +194,8 @@
                             <img src="assets/images/about-us/you.jpg" class="img-responsive center-block" width="170" height="auto" alt="">
                         </figure>
                         <div class="team-description">
-                            <div class="member-name">YOU!</div>
-                            <div class="designation">TBD<br>Innovator</div>
+                            <div class="member-name">Geneva D'Agostino</div>
+                            <div class="designation">Coordinator<br>Innovator</div>
                         </div>
 
                         <!-- team-member's-social -->
@@ -284,8 +286,8 @@
 
                 <div class="our-process-text">
                     <!-- our-process-text -->
-                    <h4>Heading 1</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores dolorum eius libero nihil. Fugiat ipsum officia reprehenderit rerum saepe. Assumenda distinctio, voluptatibus. At consectetur cumque enim error laudantium mollitia obcaecati!</p>
+                    <h4>Assemble a Coalition</h4>
+                    <p>Review the guidelines, procedures, and requirements necessary to host a TEDx event;<br>Brainstorm an awesome strategy </p>
                 </div>
 
             </div><!-- process -->
@@ -304,8 +306,8 @@
                 <div class="our-process-text right">
 
                     <!-- our-process-text -->
-                    <h4>Heading 2</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores dolorum eius libero nihil. Fugiat ipsum officia reprehenderit rerum saepe. Assumenda distinctio, voluptatibus. At consectetur cumque enim error laudantium mollitia obcaecati!</p>
+                    <h4>Apply for a License</h4>
+                    <p>Once we have decided on a theme, tentative topics, venue, and most importantly: <em>purpose!</em></p>
 
                 </div>
             </div><!-- process -->
@@ -324,8 +326,8 @@
                 <div class="our-process-text">
 
                     <!-- our-process-text -->
-                    <h4>Heading 3</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores dolorum eius libero nihil. Fugiat ipsum officia reprehenderit rerum saepe. Assumenda distinctio, voluptatibus. At consectetur cumque enim error laudantium mollitia obcaecati!</p>
+                    <h4>Recruit &amp; Execute</h4>
+                    <p>We're going to need <strong>a lot</strong> of help in order to pull this off. This is where YOU come in. Subscribe to keep up to date on our efforts. Let us know if you would like to get involved or have an idea you'd like to share.</p>
 
                 </div>
             </div><!-- process -->
@@ -568,7 +570,7 @@
                             <div>
                                 <h5>Contact Information</h5>
                                 <div class="contact-info">
-                                    kcorona@lesley.edu
+                                    contact@tedxlesley.com
                                 </div>
                             </div>
                         </div>
@@ -587,7 +589,7 @@
             <div class="col-md-3 col-sm-6">
                 <div class="content-wrap widget-text">
                     <h4>About TEDx</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores dolorum eius libero nihil. Fugiat ipsum officia reprehenderit rerum saepe. Assumenda distinctio, voluptatibus. At consectetur cumque enim error laudantium mollitia obcaecati!</p>
+                    <p>The TEDx Program is designed to help communities, organizations and individuals to spark conversation and connection through local TED-like experiences.</p>
                 </div>
             </div>
             <div class="col-md-3 col-sm-6">
@@ -596,7 +598,11 @@
                     <ul>
                         
                         <li>
-                            <i class="ion-email"></i> kcorona@lesley.edu
+                            <i class="ion-email"></i> 
+                            contact@tedxlesley.com
+                            <br>
+                            <i class="ion-email"></i> 
+                            kristin@tedxlesley.com
                         </li>
                         <li>
                             <i class="ion-ios-location"></i> Cambridge, MA
@@ -626,7 +632,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-3 col-sm-4">
-                <p class="copyright text-xs-center">&copy; 2015 Your company name</p>
+                <p class="copyright text-xs-center">&copy; 2015 tedxlesley.com</p>
             </div>
 
             <div class="col-md-5 col-sm-4">
