added disclaimer, whoops

--- a/index.html
+++ b/index.html
@@ -658,6 +658,12 @@
                 </div>
             </div>
         </div>
+        <!-- /.row -->
+        <div class="row">
+            <div class="col-md-12">
+                <h6><small>* Due to licencing restrictions, at this time we are in no way affiliated with TED or TEDx<br>* Please don't sue me</small></h6>
+            </div>
+        </div>
     </div>
 </footer>
 <!-- #footer -->
