--- a/index.html
+++ b/index.html
@@ -590,6 +590,7 @@
                 <div class="content-wrap widget-text">
                     <h4>About TEDx</h4>
                     <p>The TEDx Program is designed to help communities, organizations and individuals to spark conversation and connection through local TED-like experiences.</p>
+                    <!-- RETRIEVED FROM https://www.ted.com/about/programs-initiatives/tedx-program -->
                 </div>
             </div>
             <div class="col-md-3 col-sm-6">
