Clean up assets; update 'Meet the Team '

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </div><!-- /.header-wrapper-inner -->
 </header>
 <!-- /Header -->
-<!-- Poll -->
+<!-- Poll 
 <section id="poll" class="section poll">
     <div class="container">
         <header class="section-heading">
@@ -158,7 +158,7 @@
             </div>
         </div>
     </div>
-</section>
+</section-->
 <!-- /Poll -->
 <!-- About Us -->
 <section id="team" class="section team">
@@ -233,7 +233,7 @@
                     <!-- team-member's-bio -->
                     <div class="team-bio">
                         <figure>
-                            <img src="assets/images/about-us/you.jpg" class="img-responsive center-block" width="170" height="auto" alt="">
+                            <img src="assets/images/about-us/geneva.jpg" class="img-responsive center-block" alt="">
                         </figure>
                         <div class="team-description">
                             <div class="member-name">Geneva D'Agostino</div>
@@ -243,7 +243,7 @@
                         <!-- team-member's-social -->
                         <div class="team-social">
                             <ul class="social-block">
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="https://www.facebook.com/geneva.dagostino"><i class="fa fa-facebook"></i></a></li>
 
                                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
 
@@ -266,21 +266,21 @@
                     <!-- team-member's-bio -->
                     <div class="team-bio">
                         <figure>
-                            <img src="assets/images/about-us/you.jpg" class="img-responsive center-block" width="170" height="auto" alt="">
+                            <img src="assets/images/about-us/aaron.jpg" class="img-responsive center-block" width="170" height="auto" alt="">
                         </figure>
                         <div class="team-description">
-                            <div class="member-name">Aaron Goodman</div>
+                            <div class="member-name">Aaron Gooden</div>
                             <div class="designation">Executive Producer<br>The Wise Man</div>
                         </div>
 
                         <!-- team-member's-social -->
                         <div class="team-social">
                             <ul class="social-block">
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="https://www.facebook.com/aaron.gooden.75"><i class="fa fa-facebook"></i></a></li>
 
                                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
 
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/aaron-gooden-5a961676"><i class="fa fa-linkedin"></i></a></li>
 
                                 <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                             </ul>
@@ -456,8 +456,8 @@
                     </div>
                 </div>
             </div>< row >
-        </div><!-- section-content >
-    </div><!-- container >
+        </div>< section-content >
+    </div>< container >
 </section>
 </Fun Facts -->
 
@@ -489,7 +489,7 @@
                                 <span>By <a href="#">Prium</a></span>
                                 <span><a href="#">30 Comments</a></span>
                             </div>
-                            <p>They signed the Giving Pledge -- an effort started in 2010 by ...</p>
+                            <p>They signed the Giving Pledge  an effort started in 2010 by ...</p>
                         </div>
                     </div>
                 </div>
@@ -543,7 +543,7 @@
                                 <span>By <a href="#">Prium</a></span>
                                 <span><a href="#">30 Comments</a></span>
                             </div>
-                            <p>They signed the Giving Pledge -- an effort started in 2010 by ...</p>
+                            <p>They signed the Giving Pledge  an effort started in 2010 by ...</p>
                         </div>
                     </div>
                 </div>
@@ -564,7 +564,7 @@
         <div class="row">
             <div class="col-md-4 col-sm-6">
                 <div class="subscribe-text">
-                    <h2>Get Involved!</h2>
+                    <h2>Get Involved</h2>
                     <span>Sign up to receive more information</span>
                 </div>
             </div>
