--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <meta name="keywords" content="Agency, Corporate, Flat, Responsive">
     <meta name="robots" content="noindex,nofollow">
     <!-- Google Apps -->
-    <meta name="google-site-verification" content="yilynoEuu6FfRbuO3eapHGOoZwapON0gXslTdfcXj6A" />
+    <meta name="google-site-verification" content="yilynoEuu6FfRbuO3eapHGOoZwapON0gXslTdfcXj6A">
     <!-- -->
     <title>TEDxLesley</title>
 
-    <link rel="shortcut icon" href="assets/images/favicons/favicon.ico" />
+    <link rel="shortcut icon" href="assets/images/favicons/favicon.ico">
     <link rel="apple-touch-icon" sizes="57x57" href="assets/images/favicons/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="assets/images/favicons/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="assets/images/favicons/apple-icon-72x72.png">
@@ -47,9 +47,7 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/ie_fix.css">
 
-    <script src="assets/lib/components-modernizr/modernizr.js"></script>
-    <script src="assets/lib/jquery/dist/jquery.js"></script>
-    <script src="assets/lib/bootstrap/dist/js/bootstrap.js"></script>
+    
 
 </head>
 
@@ -72,7 +70,7 @@
             <!-- Logo -->
             <div class="navbar-brand dark-bg" itemscope itemtype="https://schema.org/Organization">
                 <span itemprop="name" class="sr-only">TEDxLesley</span>
-                <a itemprop="url" href="index.html"><img src="assets/images/logo.png" height="75" width="auto"/>
+                <a itemprop="url" href="index.html"><img src="assets/images/logo/lesleyx_white.png" height="50" width="auto"/>
                 </a>
             </div>
             <!-- /Logo -->
@@ -108,8 +106,8 @@
         <div class="container">
 
             <div class="intro">
-                <h1></h1>
-                <p>Sign up below to help make TED<sup><strong>x</strong></sup>Lesley a reality</p>
+                <h2>Sign up below to help make TEDxLesley a reality</h2>
+                <p></p>
                 <a href="#cta" class="btn btn-default-o onPageNav">Get Involved</a>
             </div><!-- /.intro -->
 
@@ -435,7 +433,7 @@
 
                     <!-- our-process-text -->
                     <h4>Hold First LesleyX Meeting</h4>
-                    <p></p>
+                    <p>TBD<br>Tentative Date: March 22, 2016</p>
 
                 </div>
             </div><!-- process -->
@@ -799,6 +797,9 @@
 
 <a id="totop" href="#totop"><i class="fa fa-angle-double-up"></i></a>
 <!-- js -->
+<script src="assets/lib/components-modernizr/modernizr.js"></script>
+<script src="assets/lib/jquery/dist/jquery.js"></script>
+<script src="assets/lib/bootstrap/dist/js/bootstrap.js"></script>
 <script src="assets/lib/imagesloaded/imagesloaded.pkgd.min.js"></script>
 <script src="assets/lib/isotope/dist/isotope.pkgd.min.js"></script>
 <script src="assets/lib/owlcarousel/owl-carousel/owl.carousel.js"></script>
